<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/gambar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/edutechforfav"
            android:contentDescription="TODO" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark">

            <EditText
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@android:color/white"
                android:hint="@string/hint_name"

                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLanjut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_lanjutkan"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_qrcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_qrcode"
            android:textColor="@android:color/white" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
